# wbs-gantt-gen

./: .gitignore  README.md  pyproject.toml
examples/dogfood-wbs-gantt-gen/: activities.tsv  project.toml  wbs-dictionary.md  works.tsv
examples/generic-software-project/: activities.tsv  project.toml  wbs-dictionary.md  works.tsv
examples/home-cooking-curry/: activities.tsv  project.toml  wbs-dictionary.md  works.tsv
src/wbsgen/: __init__.py  __main__.py  bizcal.py  cli.py  deps_dsl.py  ids.py  loader.py  model.py  scheduler.py  validator.py  wbscode.py
src/wbsgen/render/: _util.py  markdown.py  mermaid.py  pert.py  pyramid.py
tests/: test_bizcal.py  test_deps_dsl.py  test_ids.py  test_loader.py  test_render_markdown.py  test_render_mermaid.py  test_render_pyramid_pert.py  test_scheduler.py  test_validator.py  test_wbscode.py
